version/0.12/_sources/api/solver/_autosummary/settings/pathline_child.rst.txt
:orphan:

.. _pathline_child:

pathline_child
==============

.. currentmodule:: ansys.fluent.core.solver.settings_231.pathline_child

.. autoclass:: pathline_child
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==============================================   ===============================

Child                                                                    Summary

==============================================   ===============================
:ref:`name <name_1>`                                               'name' child.

:ref:`uid <uid>`                                                    'uid' child.

:ref:`options <options_6>`                                      'options' child.

:ref:`range <range>`                                              'range' child.

:ref:`style_attribute <style_attribute>`                'style_attribute' child.

:ref:`accuracy_control <accuracy_control_1>`           'accuracy_control' child.

:ref:`plot <plot_1>`                                               'plot' child.

:ref:`step <step>`                                                 'step' child.

:ref:`skip <skip>`                                                 'skip' child.

:ref:`coarsen <coarsen>`                                        'coarsen' child.

:ref:`onzone <onzone>`                                           'onzone' child.

:ref:`onphysics <onphysics>`                                  'onphysics' child.

:ref:`field <field>`                                              'field' child.

:ref:`surfaces_list <surfaces_list>`                      'surfaces_list' child.

:ref:`velocity_domain <velocity_domain>`                'velocity_domain' child.

:ref:`color_map <color_map>`                                  'color_map' child.

:ref:`draw_mesh <draw_mesh>`                                  'draw_mesh' child.

:ref:`mesh_object <mesh_object>`                            'mesh_object' child.

:ref:`display_state_name <display_state_name>`       'display_state_name' child.

:ref:`physics <physics>`                                        'physics' child.

:ref:`geometry <geometry_3>`                                   'geometry' child.

:ref:`surfaces <surfaces>`                                     'surfaces' child.

:ref:`axes <axes>`                                                 'axes' child.

:ref:`curves <curves>`                                           'curves' child.

==============================================   ===============================

.. rubric:: Commands

==========================   ======================

Command                                     Summary

==========================   ======================
:ref:`display <display_2>`       'display' command.

==========================   ======================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`pathline <pathline>`       'pathline' child.

==========================   =====================

