version/0.19/_sources/api/solver/_autosummary/settings/pathline_child.rst.txt
:orphan:

.. _pathline_child:

pathline_child
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.pathline_child.pathline_child
    :show-inheritance:

.. rubric:: Attributes

====================================================   ==================================

Attribute                                                                         Summary

====================================================   ==================================
:ref:`name <name_1>`                                                        'name' child.

:ref:`uid <uid>`                                                             'uid' child.

:ref:`options <options_11>`                                              'options' child.

:ref:`range <range>`                                                       'range' child.

:ref:`style_attribute <style_attribute>`                         'style_attribute' child.

:ref:`accuracy_control <accuracy_control_1>`                    'accuracy_control' child.

:ref:`plot <plot_4>`                                                        'plot' child.

:ref:`step <step>`                                                          'step' child.

:ref:`skip <skip>`                                                          'skip' child.

:ref:`coarsen <coarsen_1>`                                               'coarsen' child.

:ref:`onzone <onzone>`                                                    'onzone' child.

:ref:`onphysics <onphysics>`                                           'onphysics' child.

:ref:`field <field>`                                                       'field' child.

:ref:`release_from_surfaces <release_from_surfaces>`       'release_from_surfaces' child.

:ref:`velocity_domain <velocity_domain>`                         'velocity_domain' child.

:ref:`color_map <color_map>`                                           'color_map' child.

:ref:`draw_mesh <draw_mesh>`                                           'draw_mesh' child.

:ref:`mesh_object <mesh_object>`                                     'mesh_object' child.

:ref:`display_state_name <display_state_name>`                'display_state_name' child.

:ref:`physics <physics_1>`                                               'physics' child.

:ref:`geometry <geometry_5>`                                            'geometry' child.

:ref:`surfaces <surfaces_2>`                                            'surfaces' child.

:ref:`axes <axes_1>`                                                        'axes' child.

:ref:`curves <curves_1>`                                                  'curves' child.

====================================================   ==================================

.. rubric:: Methods

======================================   =============================

Method                                                         Summary

======================================   =============================
:ref:`display <display_3>`                          'display' command.

:ref:`update_min_max <update_min_max>`       'update_min_max' command.

======================================   =============================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`pathline <pathline>`       'pathline' child.

==========================   =====================

